--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -1,4 +1,4 @@
 browser=chrome
-eurl=http://192.168.1.150:5173/billing/
+eurl=http://192.168.1.150:5173/billing/billing_dashboard
 username=root@gmail.com
 password=12345678
